--- a/project/server/package.json
+++ b/project/server/package.json
@@ -17,7 +17,9 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
-    "nodemailer": "^7.0.5"
+    "node-fetch": "^2.7.0",
+    "nodemailer": "^7.0.5",
+    "openai": "^5.16.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.6",
